--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <div id="container">
         <div class="card">
             <img src="https://images.unsplash.com/photo-1536323760109-ca8c07450053" />
+            <span class="tag">Nature</span>
+            <span class="tag">Lake</span>
+            <h1>Lago di Braies</h1>
+            <p>
+                Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Consectetur<br> sodales morbi dignissim sed diam<br> pharetra vitae ipsum odio.
+            </p>
         </div>
     </div>
 </body>
