[feat] card component work fine, next add an animation to button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <p>
                 Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit. Consectetur<br> sodales morbi dignissim sed diam<br> pharetra vitae ipsum odio.
             </p>
+            <button>
+                Read More
+            </button>
         </div>
     </div>
 </body>
